# FastAPI_Template

./: .env-dist  .env.dist  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  requirements.txt  temp_structure.md
.github/workflows/: autopep8.yml  build.yml  docs.yml  formatting.yml  formattingyml  generate-page-docs.yml  generate-swagger-and-commit-to-docs.yml  get-tree-and-commit-to-readme.yml  pre-commit.yml  python-app.yml  reformat-code-and-commit.yml  reformat-code.yml  structure-to-readme.yml
app/: __init__.py  __main__.py
app/api/: __init__.py  anotations.py  depends.py  deps.py  exps.py  tags.py
app/api/api_v1/: __init__.py  api.py
app/api/endpoints/: __init__.py
app/api/staff/: __init__.py  stats.py
app/api/tokens/: __init__.py  auth.py  pair.py  refresh.py
app/api/users/: __init__.py  endpoints.py  get.py  new.py
app/api/v1/: __init__.py  auth.py  user.py
app/core/: __init__.py  config.py  db.py  deps.py  exps.py  logic.py  oauth.py  security.py  settings.py  structures.py
app/core/auth/: __init__.py  oauth2.py  security.py
app/core/security/: __init__.py  jwt.py  jwt_manager.py  oauth.py  oauth2.py  (+5 more)
app/database/: __init__.py  database.py  structures.py
app/logic/: __init__.py  auth.py  logic.py  user.py  users.py
app/models/: __init__.py  auth.py  base.py  token.py  user.py
app/repositories/: __init__.py  abstract.py  base.py  user.py
app/schemas/: __init__.py  stats.py  tokens.py  users.py
app/use_cases/: __init__.py  abstract.py
app/utils/: __init__.py
docker/app/: Dockerfile
docs/: i.html  index.html  openapi.json
migrations/: env.py  script.py.mako
migrations/versions/: 049b98bb5121_.py  052350c66c1e_.py  1ba6b6be9380_.py  3b2e332b57cf_.py  4308d719b6c2_.py  5bfce5330ad6_.py  5d74235cca04_.py  96f4b5d47cc5_.py  9fc63c3797b9_.py  c882babb8be2_.py  d7e105368d7a_.py  e5403937cdad_.py  f7bd979875db_.py  fb3e71d4e2e4_.py
tests/: conftest.py
(+79 files in other folders)
