[tool.poetry]
name = "fastapi-template"
version = "0.1.0"
description = ""
authors = ["fastcode <fast.code.auth@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
pydantic-settings = "^2.1.0"
asyncpg = "^0.29.0"
bcrypt = "^4.1.3"
fastapi = { extras = ["all"], version = "^0.111.0" }
sqlmodel = "^0.0.18"
pyjwt = "^2.8.0"
greenlet = "^3.0.3"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.0"
blue = "^0.9.1"
isort = "^5.13.2"
pytest = "^8.3.2"
aiosqlite = "^0.20.0"
pytest-asyncio = "^0.23.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
