[tool.poetry]
name = "fastapi-template"
version = "0.1.0"
description = ""
authors = ["Fast Code <fast.code.auth@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
sqlalchemy = "^2.0.35"
sqlmodel = "^0.0.22"
pydantic-settings = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
